# template-python-package-2024

./: .gitignore  .pre-commit-config.yaml  .pypirc  Dockerfile  Makefile  README.md  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.bash  postStartCommand.bash
.github/workflows/: docker-publish.yml  python-publish.yml  python-tests.yml
scripts/: build-docker-image.bash  create-venv.bash  delete-venv.bash  detect-and-set-tag-version.bash  functions.bash  pre-push.bash  run-docker-image.bash  uninstall-package.bash  verify-publish.bash
src/scripts/: verify_install.py
src/template_cli_package/: __init__.py   demo_cli.py
src/template_cli_package/resources/: .keep
src/template_package/: __init__.py  demo.py
tests/: __init__.py  conftest.py  test_demo.py
